Updated API link to Render

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -188,7 +188,7 @@
 
     <script>
         /* --- CONFIGURATION --- */
-        const API_URL = 'http://localhost:5000/api/scores'; // Backend URL
+        const API_URL = 'https://cyberpunk-glpv.onrender.com/api/scores'; // Backend URL
 
         // 1. Setup Canvas
         const canvas = document.getElementById('gameCanvas');
